devops/Docker/Caronte/proyectos/pnest/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pnest
  labels:
    app: pnest
