devops/Docker/Caronte/proyectos/pnest/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pnest
  namespace: default
  labels:
    app: pnest
spec:
  selector:
    app: pnest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
