devops/Docker/Caronte/proyectos/pnest/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pnest
  namespace: pnest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.pedrorodriguezgimenez.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pnest
                port:
                  number: 80
